@@ -1,5 +1,10 @@
 IMOD History
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+11/29/11: Fixed initial height of Info window when there is a long filename
+(In 4.3).
+
+11/29/11: Changes to Noske plugins; livewire works in blocks (In 4.3).
+
 11/28/11: Fixed Last Fill Color button in finegrain dialog (In 4.3).
 
 11/22/11: Fixed pysed.py to allow ^ and + in filenames again (In 4.3).
